--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "@lukaspolak/create-typescript-library",
+  "name": "@lukaspolak/react-get-data-cy",
   "version": "0.0.1",
   "description": "A repository template for a TypeScript library.",
-  "keywords": [],
-  "repository": "git@github.com:lukaspolak/create-typescript-library.git",
+  "keywords": [
+    "cypress",
+    "cy",
+    "data",
+    "data-attribute",
+    "react",
+    "testing"
+  ],
+  "repository": "git@github.com:lukaspolak/react-get-data-cy.git",
   "license": "MIT",
   "author": "Lukas Polak <lukash.polak@gmail.com> (https://lukaspolak.com/)",
   "main": "lib/umd/index.js",
@@ -19,7 +26,7 @@
     "commit": "cz",
     "format": "prettier --write .",
     "hygen:file": "hygen file new",
-    "lint": "eslint ./{src,test}/**/*.ts",
+    "lint": "eslint './{src,test}/**/*.{ts,tsx}'",
     "prepublishOnly": "yarn build && yarn test",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest",
@@ -43,12 +50,17 @@
     ]
   },
   "prettier": "@lukaspolak/prettier-config",
+  "dependencies": {
+    "@lukaspolak/kebab-case": "^0.0.1",
+    "@lukaspolak/react-get-inner-text": "^0.0.1"
+  },
   "devDependencies": {
     "@lukaspolak/prettier-config": "^0.0.3",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "commitizen": "^4.2.3",
@@ -62,11 +74,15 @@
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "prettier-plugin-packagejson": "^2.2.9",
+    "react": "^17.0.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.4",
     "rollup-plugin-typescript2": "^0.29.0",
     "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "peerDependencies": {
+    "react": "^17.0.1"
   }
 }
